<resources>
    <string name="app_name">BCSN Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragment_4">Fragment 4</string>
    <string name="media_player">Media Player</string>
    <string name="news">News</string>
    <string name="bookmark">BookMark</string>
    <string name="market">Market</string>
    <string name="btc">Btc</string>
    <string name="volume">Volume</string>
    <string name="pcp">PCP</string>
    <string name="pc">PC</string>
    <string name="lp">LP</string>
</resources>