<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/recyclerCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/recyclerTV1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/volume"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/recyclerTV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/btc"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LL1"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/recyclerTV3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/lp"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/recyclerTV4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/btc"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LL2"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/recyclerTV5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/pc"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/recyclerTV6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/btc"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LL3"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/recyclerTV7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/pcp"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/recyclerTV8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/btc"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    tools:ignore="RtlCompat"
                    />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>